kub-brandsSource-service-boot2-V2/k8s/dp-kubBrandsSource-rollingupdate-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dp-brandssource-v2
  namespace: default
  labels:
    app: kub-brandssource-service
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
      minReadySeconds: 10
      #minReadySeconds:the bootup time of your application, Kubernetes waits specific time til the next pod creation.
      #maxSurge: 1 means that there will be at most 3 pods during the update process if replicas is 2
      #maxUnavailable:amount of pods that can be unavailable during the update process
  replicas: 2
  template:
    metadata:
      labels:
        app: kub-brandssource-service
        version: brandssource-version-2
    spec:
      containers:
      - name: brandssource-version-2
        image: ddas55/kub-brandssource-service-v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: vm-kub-brandssource-appprops
          mountPath: "/config/" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-bootstrap
          mountPath: "/config/bootstrap" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-apppropsprod
          mountPath: "/config/prod" 
          readOnly: true
        livenessProbe:
          httpGet:
            path: /svcbrands/brands/healthz
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /svcbrands/brands/rediness
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 5
      volumes:
      - name: vm-kub-brandssource-appprops
        configMap:
          name: cm-kub-brandssource-app
          items:
          - key: application.properties 
            path: application.properties
      - name: vm-kub-brandssource-bootstrap
        configMap:
          name: cm-kub-brandssource-bootstrap
          items:
          - key: bootstrap.properties 
            path: bootstrap.properties
      - name: vm-kub-brandssource-apppropsprod
        configMap:
          name: cm-kub-brandssource-apppropsprod
          items:
          - key: application-prod.properties 
            path: application-prod.properties
