kub-brandsSource-service-boot2-V2/k8s/ingress-kubBrandsSource-green.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-brandssource
spec:
  rules:
    - http:
        paths:
          - path: /svcbrands
            backend:
              serviceName: svc-kub-brandssource-service
              servicePort: 8070
#          - path: /echoserver
#            backend:
#              serviceName: echoserver-svc  
#              servicePort: 8080


#use annotation rewrite-target to guarantee that traffic redirection starts from root, /.
